# GAI_Academic_Advising_Assistant_MVP

./: .gitignore  LICENSE  README.md  all_links.txt  build.ps1  build.sh  package-lock.json  questions_topics_scores.csv
.github/workflows/: app_tests.yml  client_tests.yml
app/: .dockerignore  .env.test  .env.ucf.local  Dockerfile  README.md  app.py  app_server.py  env.it.local  gunicorn.conf.py  logging.yaml  main.py  models.py  noxfile.py  pyproject.toml  setupenv.ps1  user_conversation.py
app/app_auth/: authorize_user.py  token_check.py
app/cloud_services/: azure_cog_service.py  connect_mongo.py  google_search.py  gpt_models.py  internet_search.py  kg_neo4j.py  llm_services.py  llm_test.py  openai_response_objects.py  test_mongo.py  vector_search.py
app/conversation/: answer_user_question.py  ask_follow_up.py  chat_message.py  check_considerations.py  conversation.py  refine_questions_prompt.py  retrieve_conversations.py  retrieve_docs.py  retrieve_messages.py  return_questions.py  run_chat.py  run_graph.py  search_string_prompt.py  streaming_parser.py  topic.py  update_conversation.py  user_conversation.py
app/conversation/prompt_templates/: classify_graph_prompt.py  gpt_qa_prompt.py  internet_search_query.py  kick_back_prompt.py  refine_questions_prompt.py  search_string_prompt.py
app/data/: demo_topics.json  graph_vector.py  mock_user_session.json  models.py  new_topic_list.py  query_mongo.py  sample_questions.json  test_chat_body.json  test_user.json
app/demo_setup/: __init__.py  inst_profile_setup.py
app/evaluation_metrics/: combined_topics.csv  cosign_similarity.py  evalq.txt  evaluate.py  example_questions.py  full_retrieval.py  graph_completeness.py  neo4j_scoring.py  nlp.py  qa_retrieval_eval.py  ranking_model.ipynb  spell_check.py  topic_eval.ipynb  webpage_stats.ipynb
app/graph_update/: graph_eval_and_update.py
app/graph_update/prompt_templates/: evaluate_matching_considerations.py  generate_new_relationships.py  generate_new_topic.py
app/institution/: institution.py
app/settings/: settings.py
app/tests/: test_app.py
app/tests/cassettes/test_app/: test_user_chat_success.yaml  test_user_questions_success.yaml
app/tests/conversation/: test_user_conversation.py
app/tests/mocks/: mock_services.py
app/user/: create_user.py  get_user_info.py
app/user_profile/: profile_internal.py
app/util/: json_helper.py  logger_format.py  model_helper.py  poetry_conversion.py
app/web_scraping/: all_links.txt  apify_page_count.py  azure_cog_service.py  catalog.py  dns_resolver.py  documents_to_mongo.py  documents_to_vector_store.py  documents_to_vector_store_mongo.py  file_tracker.py  file_utilities.py  find_dates.py  kb_documents_to_mongo.py  links_list.py  llm_services.py  openai_response_objects.py  pandas_to_mongo.py  qna.py  quick_mongo_query.py  raw_documents_to_mongo.py  scrape.py  scrape_catalog.py  scrape_domain.py  scraping_prompts.py
app/web_scraping/utils/: remove_dup_qna.py
client/: .dockerignore  Dockerfile  README.md  entrypoint.sh  envdev.txt  inject-env.sh  package-lock.json  package.json  tsconfig.json
client/.storybook/: main.js  preview.js  test-runner.js
client/public/: index.html
client/src/: App.js  App.test.js  authConfig.js  images.d.ts  index.js  (+2 more)
infra/: README.md  containers.bicep  generate_secret.py  index_definition.json  killport.sh  params_container.json  params_webapp.json  postman_curl.txt  setup_env_linux.sh  setup_env_windows.ps1  setup_script.sh  webapps.bicep  what_if_deployment.sh
(+124 files in other folders)
