[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.1.4"
python-dotenv = "^1.0.1"
fastapi = "^0.109.0"
azure-ai-textanalytics = "^5.3.0"
openai = "^1.10.0"
azure-identity = "^1.15.0"
tiktoken = "^0.5.2"
sse-starlette = "^2.0.0"
mongoengine = "^0.27.0"
azure-search = "^1.0.0b2"
azure-search-documents = "^11.4.0"
pydantic-settings = "^2.1.0"
azure-storage-blob = "^12.19.0"
itsdangerous = "^2.1.2"
pytest-mock = "^3.12.0"
pyjwt = "^2.8.0"
requests = "^2.31.0"
certifi = "^2024.2.2"
pyopenssl = "^24.0.0"
pip-system-certs = "^4.0"
langchain-openai = "^0.0.5"
langchain-core = "^0.1.18"
langchain-community = "^0.0.17"
gunicorn = "^21.2.0"
uvicorn = "^0.27.0.post1"
pip = "^24.0"
install = "^1.3.5"
aiohttp = "^3.9.3"
pytz = "^2024.1"
pymongo = "^4.6.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
flake8 = "^7.0.0"
nox = "^2023.4.22"
bandit = "^1.7.7"
coverage = "^7.4.1"
mypy = "^1.8.0"
black = "^24.1.1"
respx = "^0.20.2"
pytest-mock = "^3.12.0"

[tool.pytest.ini_options]
addopts = "-p no:warnings"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
