[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.1.4"
python-dotenv = "^1.0.1"
fastapi = "^0.109.0"
azure-ai-textanalytics = "^5.3.0"
openai = "^1.10.0"
azure-identity = "^1.15.0"
tiktoken = "^0.5.2"
sse-starlette = "^2.0.0"
mongoengine = "^0.27.0"
azure-search = "^1.0.0b2"
azure-search-documents = "^11.4.0"
pydantic-settings = "^2.1.0"
azure-storage-blob = "^12.19.0"
itsdangerous = "^2.1.2"
pytest-mock = "^3.12.0"
pyjwt = "^2.8.0"
requests = "^2.31.0"
certifi = "^2024.2.2"
pyopenssl = "^24.0.0"
pip-system-certs = "^4.0"
langchain-openai = "^0.0.5"
langchain-core = "^0.1.18"
langchain-community = "^0.0.17"
gunicorn = "^21.2.0"
uvicorn = "^0.27.0.post1"
pip = "^24.0"
install = "^1.3.5"
aiohttp = "^3.9.3"
pytz = "^2024.1"
pymongo = "^4.6.2"
python-json-logger = "^2.0.7"
neo4j = "^5.18.0"
spacy = "^3.7.4"
symspellpy = "^6.7.7"
textblob = "^0.18.0.post0"
pyspellchecker = "^0.8.1"
python3-saml = "^1.16.0"
python-multipart = "^0.0.9"
google-api-python-client = "^2.127.0"
beautifulsoup4 = "^4.12.3"
playwright = "^1.43.0"
unidecode = "^1.3.8"
pandas = "^2.2.2"
scikit-learn = "^1.5.0"
wordsegment = "^1.3.1"
matplotlib = "^3.9.0"
nltk = "^3.8.1"
apify-client = "^1.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
flake8 = "^7.0.0"
nox = "^2023.4.22"
bandit = "^1.7.7"
coverage = "^7.4.1"
mypy = "^1.8.0"
black = "^24.1.1"
respx = "^0.20.2"
pytest-mock = "^3.12.0"
mongomock = "^4.1.2"
pytest-recording = "^0.13.1"
pytest-asyncio = "^0.23.4"

[tool.pytest.ini_options]
log_cli_level = "ERROR"
addopts = "-p no:warnings"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
